--- a/assets/scss/_footer.scss
+++ b/assets/scss/_footer.scss
@@ -3,7 +3,13 @@
     justify-content: space-between;
     align-items: center;
     padding: 50px 0px;
+
+    @media (max-width: 425px) {
+        flex-direction: column-reverse;
+        gap: 30px;
+    }
 }
+
 
 .social__list {
     display: flex;
