--- a/assets/scss/_first-screen.scss
+++ b/assets/scss/_first-screen.scss
@@ -3,13 +3,19 @@
     justify-content: space-between;
     align-items: center;
     gap: 50px;
-    margin: 50px 0px;
+    margin: 200px 200px;
 
     .page {
         display: flex;
         flex-direction: column;
         align-items: center;
         gap: 60px;
+        position: fixed;
+        width: inherit;
+        max-width: inherit;
+        top: 50%;
+        left: 0;
+        margin: -200px 0px 0px -200px;
 
         .aside__line {
             height: 140px;
@@ -37,6 +43,12 @@
         display: flex;
         align-items: center;
         gap: 30px;
+        position: fixed;
+        width: inherit;
+        max-width: inherit;
+        top: 50%;
+        right: 0;
+        margin: -200px 0px 0px -200px;
 
         .aside__counter {
             text-align: center;
@@ -58,10 +70,12 @@
     .main__subtitle {
         font-size: 14px;
         font-weight: 500;
+        margin-bottom: 30px;
     }
 
     .main__heading {
         font-size: 64px;
+        margin-bottom: 20px;
     }
 
     .main__text {
