--- a/assets/scss/_header.scss
+++ b/assets/scss/_header.scss
@@ -4,6 +4,11 @@
     align-items: center;
     padding: 50px 0px;
 
+    position: fixed;
+    top: 0;
+    width: inherit;
+    max-width: inherit;
+
     .header__logo {
         font-weight: 600;
         display: flex;
