--- a/assets/scss/_first-screen.scss
+++ b/assets/scss/_first-screen.scss
@@ -1,87 +1,31 @@
-.main {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    gap: 50px;
-    margin: 200px 200px;
+.first-screen {
+    padding-top: 140px;
 
-    .page {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        gap: 60px;
-        position: fixed;
-        width: inherit;
-        max-width: inherit;
-        top: 50%;
-        left: 0;
-        margin: -200px 0px 0px -200px;
-
-        .aside__line {
-            height: 140px;
-            width: 1px;
-            background-color: $primary;
-            opacity: 0.5;
-        }
-
-        .aside__article {
-            width: 80px;
-            height: 80px;
-            border-radius: 50%;
-            border: 1px solid $primary;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-
-            .aside__span {
-                font-size: 20px;
-            }
-        }
+    .aside__progress {
+        height: 25%;
+        width: 100%;
+        background-color: $primary;
     }
 
-    .progress {
-        display: flex;
-        align-items: center;
-        gap: 30px;
-        position: fixed;
-        width: inherit;
-        max-width: inherit;
-        top: 50%;
-        right: 0;
-        margin: -200px 0px 0px -200px;
-
-        .aside__counter {
-            text-align: center;
-            line-height: 150%;
-        }
-
-        .aside__progress-bar {
-            width: 2px;
-            height: 268px;
-            background-color: $secondary;
-
-            .aside__progress {
-                background-color: $primary;
-                height: 10vh;
-            }
-        }
-    }
-
-    .main__subtitle {
+    .article__subtitle {
         font-size: 14px;
-        font-weight: 500;
         margin-bottom: 30px;
+        font-weight: 500;
     }
 
-    .main__heading {
+    .article__title {
         font-size: 64px;
         margin-bottom: 20px;
     }
 
-    .main__text {
-        color: $secondary;
+    .article__text {
         font-size: 20px;
-        width: 60%;
+        color: $secondary;
         letter-spacing: 0.05em;
+        width: 65%;
+
+        @media (max-width: 768px) {
+            width: 100%;
+        }
     }
 }
