--- a/assets/scss/_about.scss
+++ b/assets/scss/_about.scss
@@ -39,6 +39,7 @@
                 .active {
                     .navigator__button {
                         color: $primary;
+                        font-weight: 600;
                     }
 
                     .navigator__span {
