--- a/assets/scss/_contact.scss
+++ b/assets/scss/_contact.scss
@@ -1,4 +1,7 @@
 .contact {
+    margin-top: 100vh;
+    padding-bottom: 150px;
+
     .aside__progress {
         height: 100%;
         width: 100%;
