--- a/assets/scss/_header.scss
+++ b/assets/scss/_header.scss
@@ -22,4 +22,16 @@
             letter-spacing: 0.1em;
         }
     }
+
+    .header__menu {
+        display: flex;
+        align-items: center;
+        gap: 60px;
+
+        .nav__list {
+            display: flex;
+            gap: 30px;
+            transition: all 0.5s ease;
+        }
+    }
 }
