--- a/assets/scss/_sections.scss
+++ b/assets/scss/_sections.scss
@@ -11,6 +11,7 @@
         align-items: center;
         position: relative;
         margin-bottom: 150px;
+        z-index: -1;
 
         @media (max-width: 1150px) {
             margin-bottom: 50px;
