--- a/assets/scss/_contact.scss
+++ b/assets/scss/_contact.scss
@@ -2,6 +2,10 @@
     margin-top: 100vh;
     padding-bottom: 150px;
 
+    .article {
+        width: 100%;
+    }
+
     .aside__progress {
         height: 100%;
         width: 100%;
@@ -36,6 +40,11 @@
 
         &__link {
             color: $secondary;
+            transition: color 0.5s ease;
+
+            &:hover {
+                color: $primary;
+            }
         }
     }
 }
