--- a/assets/scss/_about.scss
+++ b/assets/scss/_about.scss
@@ -8,11 +8,17 @@
         background-color: $primary;
     }
 
+    .chapter {
+        transition: all 0.5s ease;
+        width: 80%;
+    }
+
     .article__wrapper {
         display: flex;
         justify-content: space-between;
         align-items: center;
         gap: 100px;
+        width: 60vw;
 
         @media (max-width: 1150px) {
             flex-direction: column;
@@ -21,7 +27,7 @@
         }
 
         .article__navigator {
-            width: 40%;
+            width: 20%;
 
             .navigator__list {
                 display: flex;
@@ -78,6 +84,115 @@
             .article__character {
                 font-size: 16px;
                 letter-spacing: 0.05em;
+            }
+        }
+    }
+
+    .article__work {
+
+        .company {
+            display: flex;
+            align-items: flex-start;
+            gap: 35px;
+            margin-bottom: 30px;
+
+            .company__logo>svg {
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                padding: 20px;
+                width: 150px;
+                height: 150px;
+                background-color: #2B2D3F;
+                border-radius: 10px;
+            }
+
+            .company__name {
+                font-size: 24px;
+                margin-bottom: 5px;
+            }
+
+            .company__subtitle {
+                color: $secondary;
+                font-size: 14px;
+                margin-bottom: 15px;
+            }
+
+            .company__attrs {
+                font-weight: 700;
+                font-size: 16px;
+                margin-bottom: 15px;
+
+                .company__span {
+                    padding: 0px 15px;
+                }
+            }
+
+            .company__about {
+                color: $secondary;
+                font-size: 16px;
+                margin-bottom: 20px;
+            }
+
+            .company__link {
+                font-weight: 700;
+                font-size: 16px;
+                text-decoration: underline;
+            }
+        }
+    }
+
+    .article__technologies {
+
+
+        .chapter__inner {
+            position: relative;
+            z-index: 1;
+            display: flex;
+            flex-direction: column;
+            gap: 40px;
+
+            .article__button {
+                display: flex;
+                align-items: center;
+                gap: 20px;
+                font-size: 32px;
+                font-weight: 700;
+                margin-bottom: 20px;
+
+                svg {
+                    transition: transform 0.3s ease;
+                    transform: rotate(180deg);
+                }
+            }
+
+            .active {
+                svg {
+                    transform: rotate(0deg);
+                }
+            }
+
+            .chapter__list {
+                z-index: 1;
+                display: flex;
+                flex-direction: column;
+                transition: all 0.5s ease;
+                gap: 20px;
+
+                .chapter__element {
+                    display: flex;
+                    flex-direction: column;
+                    gap: 5px;
+
+                    .chapter__span {
+                        color: $secondary;
+                        font-size: 16px;
+                    }
+
+                    .chapter__tech {
+                        font-size: 24px;
+                    }
+                }
             }
         }
     }
