--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -46,7 +46,10 @@ a {
 .hidden {
     opacity: 0;
     pointer-events: none;
-    position: fixed;
+}
+
+.hidden-full {
+    display: none !important;
 }
 
 @import "_header";
