--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -65,7 +65,10 @@ a {
 .hidden {
   opacity: 0;
   pointer-events: none;
-  position: fixed;
+}
+
+.hidden-full {
+  display: none !important;
 }
 
 .header {
