--- a/assets/scss/_header.scss
+++ b/assets/scss/_header.scss
@@ -28,10 +28,19 @@
         align-items: center;
         gap: 60px;
 
+        .header__button {
+            transition: transform 0.4s ease;
+        }
+
+        .active {
+            transform: rotate(-180deg);
+        }
+
         .nav__list {
             display: flex;
             gap: 30px;
             transition: all 0.5s ease;
+            animation: navRise 0.5s 1;
         }
     }
 }
