--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -514,6 +514,8 @@ a {
   -webkit-transition: all 0.5s ease;
   transition: all 0.5s ease;
   width: 80%;
+  position: relative;
+  z-index: 1;
   -webkit-animation: chapterRise 0.5s 1;
           animation: chapterRise 0.5s 1;
 }
