--- a/assets/scss/_about.scss
+++ b/assets/scss/_about.scss
@@ -11,6 +11,8 @@
     .chapter {
         transition: all 0.5s ease;
         width: 80%;
+        position: relative;
+        z-index: 1;
         animation: chapterRise 0.5s 1;
     }
 
@@ -91,7 +93,6 @@
     }
 
     .article__work {
-
         .company {
             display: flex;
             align-items: flex-start;
